Fix deprecated java code